Ajout des slides jusqu'au chapitre 4 et des exercices jusqu'à sklearn (non terminé) + ajout des ressources

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,8 @@
 <ul class="menu">
-
-<li><a class="page-link" href="{{ site.baseurl }}/"><i class="fa fa-home fa-lg"></i> Accueil</a></li>
-<li><a class="page-link" href="{{ site.syllabus }}"><i class="fa fa-list-ul fa-lg"></i> Syllabus</a></li>
-<li><a class="page-link" href="/ressources/"><i class="fas fa-book"></i> Ressources</a></li>
-<li><a class="page-link" href="/slides/"><i class="fas fa-book-reader"></i> Slides</a></li>
-<li><a class="page-link" href="https://github.com/{{ site.githubdir }}"><i class="fab fa-github"></i></a></li>
-<li><a class="page-link" href="{{ site.authorurl }}"><i class="fa fa-user fa-lg"></i></a></li> 
-    </ul>
+	<li><a class="page-link" href="{{ site.baseurl }}/"><i class="fa fa-home fa-lg"></i> Accueil</a></li>
+	<li><a class="page-link" href="/slides/"><i class="fas fa-chalkboard-teacher"></i> Slides</a></li>
+	<li><a class="page-link" href="/ressources/"><i class="fas fa-book"></i> Ressources</a></li>
+	<li><a class="page-link" href="/exercices/"><i class="fas fa-dumbbell"></i> Exercices</a></li>
+	<!-- <li><a class="page-link" href="https://github.com/{{ site.githubdir }}"><i class="fab fa-github"></i></a></li>
+	<li><a class="page-link" href="{{ site.authorurl }}"><i class="fa fa-user fa-lg"></i></a></li>  -->
+</ul>
